Added Breakout in Javascript and removed ability to change formbar

--- a/index.html
+++ b/index.html
@@ -4,86 +4,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Thumbs Panel</title>
+  <title>My Panel</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <div id="content">
     <div id="headerBox">
-      <h1>Thumbs Panel</h1>
-      <p id="phrasePara"></p>
-    </div>
-    <div class="linksBox">
-      <h1>TUTD</h1>
-      <p>This is a panel to control the Formbar.</p>
-      <p><a href="http://172.21.3.4:5000/tutd?thumb=up">Thumbs Up</a></p>
-      <p><a href="http://172.21.3.4:5000/tutd?thumb=wiggle">Wiggle</a></p>
-      <p><a href="http://172.21.3.4:5000/tutd?thumb=down">Thumbs Down</a></p>
-      <p><a href="http://172.21.3.4:5000/tutd?thumb=oops">OOPS</a></p>
-    </div>
-    <div class="textBox">
-      <img class="f-left" src="img/Drip Goku.jfif" alt="Mastered Ultra Instinct with the Drip!">
-      <p>Drip Goku. That's all.</p>
-      <img class="f-right" src="img/convertible.jfif" alt="Dababy turned into a Convertible!">
-      <p>Dababy is going to turn into a Convertible! LET'S GOOOOOOOOO!!!!!!!!!!! He will turn you into a Convertible! LET'S GOOOOOOOOO!!!!!!!!!! We are now all Convertibles! LET'S GOOOOOOOOO!!!!!!!!!</p>
-      <img class="f-left" src="img/Eren Drip.jfif" alt="Eren puts ont the Drip Jacket!">
-      <p>Eren puts on the Drip Jacket to get ready to start the Rumbling and commit mass Genocide to every race but his own.</p>
+      <h1>My Panel</h1>
     </div>
     <div class="linksBox">
       <h1>Games</h1>
       <p>This is a panel that takes you to different games.</p>
       <p><a href="game.html">My Game</a></p>
-    </div>
-    <div class="linksBox">
-      <h1>Music</h1>
-      <p>This is a panel that controls the music.</p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=Able_Sisters">Able Sisters</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=FF7MainTheme">FF7 Main Theme</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=NeonGenesisEvangelion">Neon Genesis Evangelion</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=UltraInstinctThemeGoku">Ultra Instinct Theme</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=UndertaleMegalovania">Megalovania</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=attack_on_titan">SHINZO SASAGEYO</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=black_clover">Black Clover</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=chugjug">Number 1 Victory Royale</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=crabrave">Crabrave</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=giorno">Giorno's Theme</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=jojo5">Golden Wind Op 2</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=kahootslobby1">Kahoot</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=megametal">Megametal</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=rickcoffin">Rickcoffin</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=rickroll">Rickroll</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=roundabout">Roundabout</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=shrek">Shrek</a></p>
-      <p><a href="http://172.21.3.4:5000/bgm?file=snowdin_remix1">Snowdin Remix</a></p>
-    </div>
-    <div class="linksBox">
-      <h1>Colors</h1>
-      <p>This is a panel that controls the color.</p>
-      <p><a href="http://172.21.3.4:5000/color?hex=0000cc">Blue</a></p>
-    </div>
-    <div class="linksBox">
-      <h1>Percentages</h1>
-      <p>This is a panel that controls the percentages.</p>
-      <p><a href="http://172.21.3.4:5000/perc?amount=100">100 Percent!</a></p>
-      <p><a href="http://172.21.3.4:5000/perc?amount=75">75 Percent</a></p>
-      <p><a href="http://172.21.3.4:5000/perc?amount=50">50 Percent</a></p>
-      <p><a href="http://172.21.3.4:5000/perc?amount=25">25 Percent</a></p>
-    </div>
-    <div class="linksBox">
-      <h1>Messages</h1>
-      <p>This is a panel that allows you to send messages.</p>
-      <p><a href="http://172.21.3.4:5000/say?phrase=Hello">Hello</a></p>
-      <p><a href="http://172.21.3.4:5000/say?phrase=ඞSUSඞ">ඞSUSඞ</a></p>
+      <p><a href="Breakout in Javascript\index.html">Breakout in Javascript</a></p>
     </div>
   </div>
-  <script type="text/javascript">
-    var phraseList = ["sword", "pickaxe", "shovel", "cure for cancer", "ඞSUSඞ"]
-    var random = Math.random() * 5
-    random = Math.floor(random)
-    var phrasePara = document.getElementById("phrasePara")
-    phrasePara.innerHTML = phraseList[random]
-  </script>
 </body>
 
 </html>
