Added icons to main page and breakout

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My Panel</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" type="text/css">
+  <link rel="icon" href="icon\senatorCatstrong.png" type="image/png">
 </head>
 
 <body>
