--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="linksBox">
       <h1>Games</h1>
-      <p>This is a panel that takes you to different games.</p>
+      <p>This panel takes you to different games I have made.</p>
       <p><a href="Get 2 School\game.html">My Game</a></p>
       <p><a href="Breakout in Javascript\index.html">Breakout in Javascript</a></p>
     </div>
