--- a/Breakout in Javascript/index.html
+++ b/Breakout in Javascript/index.html
@@ -13,11 +13,11 @@
 <body>
     <div>
         <div class="controls">
-            <p class="controls">Use Arrow keys to Move</p>
-            <p>Music: M</p>
-            <p>SFX: S</p>
-            <p>Volume: ↑ ↓</p>
-            <p>Start: Space</p>
+            <p class="controls">Use <- -> Keys or Thumb Stick to Move</p>
+            <p>Music: M Key or A Button</p>
+            <p>SFX: S Key or B Button</p>
+            <p>Volume: ↑ ↓ Keys or Left and Right Bumpers</p>
+            <p>Start: Space or Start Button</p>
         </div>
     </div>
 
