--- a/Breakout in Javascript/index.html
+++ b/Breakout in Javascript/index.html
@@ -13,7 +13,7 @@
 <body>
     <div>
         <div class="controls">
-            <p class="controls">Use <- -> Keys or Thumb Stick to Move</p>
+            <p class="controls">Use <- -> Keys, Mouse Hover, Thumb Stick, or Touch Screen to Move</p>
             <p>Music: M Key or A Button</p>
             <p>SFX: S Key or B Button</p>
             <p>Volume: ↑ ↓ Keys or Left and Right Bumpers</p>
