Added Buttons to Control Sound

--- a/Breakout in Javascript/index.html
+++ b/Breakout in Javascript/index.html
@@ -14,9 +14,10 @@
     <div>
         <div class="controls">
             <p class="controls">Use <- -> Keys, Mouse Hover, Thumb Stick, or Touch Screen to Move</p>
-            <p>Music: M Key or A Button</p>
-            <p>SFX: S Key or B Button</p>
+            <p>Music: M Key or A Button <button onclick="muteMusic()">Mute Music</button></p>
+            <p>SFX: S Key or B Button <button onclick="muteSFX()">Mute SFX</button></p>
             <p>Volume: ↑ ↓ Keys or Left and Right Bumpers</p>
+            <p>Volume Buttons: <button onclick="volumeDown()">Lower</button> <button onclick="volumeUp()">Higher</button></p>
             <p>Start: Space or Start Button</p>
         </div>
     </div>
