--- a/Breakout in Javascript/index.html
+++ b/Breakout in Javascript/index.html
@@ -7,7 +7,7 @@
     <title>Breakout in Javascript</title>
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <link rel="icon" href="icon\breakout.png" type="image/png">
+    <link rel="icon" href="icon\ball.png" type="image/png">
 </head>
 
 <body>
