added projectile dodging game

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <p>This panel takes you to different games I have made.</p>
       <p><a href="Get 2 School\game.html">My Game</a></p>
       <p><a href="Breakout in Javascript\index.html">Breakout in Javascript</a></p>
+      <p><a href="JS Projectile Dodging Game\ProjectileDodging.html">Projectile Dodging Game</a></p>
     </div>
   </div>
 </body>
