updated and maybe finished  js breakout

--- a/Breakout in Javascript/index.html
+++ b/Breakout in Javascript/index.html
@@ -23,10 +23,9 @@
         </div>
     </div>
 
-    <canvas id="breakout" width="800" height="600"></canvas>
+    <canvas id="breakout"></canvas>
     <br />
     <button id="play-button" onclick="play()">START</button>
-
     <script type="text/javascript" src="breakout.js"></script>
 </body>
 
