Added favicon and maybe fixed image

--- a/JS Projectile Dodging Game/ProjectileDodging.html
+++ b/JS Projectile Dodging Game/ProjectileDodging.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projectile Dodging Game</title>
+    <link rel="icon" href="Images/redSquare.png" type="image/png">
 </head>
 <canvas id="game-canvas"></canvas>
 <style>
@@ -134,7 +135,7 @@
 
         // gameover image
         var gameoverImg = new Image();
-        gameoverImg.src = "images/blueLobster.png";
+        gameoverImg.src = "Images/blueLobster.png";
         gameoverImg.addEventListener("load", function () {
         });
 
