--- a/JS Projectile Dodging Game/ProjectileDodging.html
+++ b/JS Projectile Dodging Game/ProjectileDodging.html
@@ -90,6 +90,7 @@
 
         // function to start the game
         function startGame() {
+            resetGame();
             gameStarted = true;
             startButton.style.display = "none"; // hide the start button
             backgroundMusic.play(); // start playing the background music
@@ -128,7 +129,6 @@
 
         // function to restart the game
         function restartGame() {
-            resetGame();
             restartButton.style.display = "none";
             startGame();
         }
@@ -157,7 +157,7 @@
         // array to store coins
         var coins = [];
 
-        // function to create coin every 10 seconds
+        // function to create coin every few seconds
         if (!gameOver) {
             setInterval(function () {
                 coin.x = Math.random() * (canvas.width - coin.width);
