--- a/JS Projectile Dodging Game/ProjectileDodging.html
+++ b/JS Projectile Dodging Game/ProjectileDodging.html
@@ -53,7 +53,6 @@
 </style>
 <audio id="coin-audio" src="sfx/mixkit-game-coin-touch-3217.wav"></audio>
 <audio id="gameover-audio" src=""></audio>
-<video id="gameover-video" src=""></video>
 
 <body>
     <button id="start-button">Start Game</button>
@@ -147,7 +146,9 @@
             fileType = 'image';
         }
         if (ranNum == 2) {
-            document.getElementById('gameover-video').src = 'sfx/OneDay.mp4';
+            var video = document.createElement("video");
+            video.id = "gameover-video";
+            video.src = "sfx/OneDay.mp4";
             fileType = 'video'
         }
 
@@ -443,15 +444,19 @@
                     ctx.drawImage(gameoverImg, 0, 0, canvas.width, canvas.height);
                 }
                 if (fileType == 'video') {
-                    document.getElementById('gameover-video').addEventListener('play', function () {
-                        var $this = this; //cache
-                        (function loop() {
-                            if (!$this.paused && !$this.ended) {
-                                ctx.drawImage($this, 0, 0);
-                                setTimeout(loop, 1000 / 30); // drawing at 30fps
-                            }
-                        })();
-                    }, 0);
+                    // Get the video to properly be drawn by the canvas
+
+
+
+                    // document.getElementById('gameover-video').addEventListener('play', function () {
+                    //     var $this = this; //cache
+                    //     (function loop() {
+                    //         if (gameOver) {
+                    //             ctx.drawImage($this, 0, 0, canvas.width, canvas.height);
+                    //             setTimeout(loop, 1000 / 30); // drawing at 30fps
+                    //         }
+                    //     })();
+                    // }, 0);
                 }
                 ctx.fillText("Game Over!", canvas.width / 2 - 100, canvas.height / 2);
                 ctx.fillText("Time: " + seconds + "s", canvas.width / 2 - 100, canvas.height / 2 + 50);
