--- a/JS Projectile Dodging Game/ProjectileDodging.html
+++ b/JS Projectile Dodging Game/ProjectileDodging.html
@@ -149,7 +149,8 @@
             var video = document.createElement("video");
             video.id = "gameover-video";
             video.src = "sfx/OneDay.mp4";
-            fileType = 'video'
+            video.style.zIndex = '2';
+            fileType = 'video';
         }
 
         // timer variable
@@ -445,18 +446,14 @@
                 }
                 if (fileType == 'video') {
                     // Get the video to properly be drawn by the canvas
-
-
-
-                    // document.getElementById('gameover-video').addEventListener('play', function () {
-                    //     var $this = this; //cache
-                    //     (function loop() {
-                    //         if (gameOver) {
-                    //             ctx.drawImage($this, 0, 0, canvas.width, canvas.height);
-                    //             setTimeout(loop, 1000 / 30); // drawing at 30fps
-                    //         }
-                    //     })();
-                    // }, 0);
+                    // Still isn't working despite the code
+                    document.body.appendChild(video);
+                    video.addEventListener('play', function () {
+                        (function loop() {
+                            ctx.drawImage(video.src, 0, 0, canvas.width, canvas.height);
+                            requestAnimationFrame(loop, 1000 / 30); // drawing at 30fps
+                        })();
+                    }, 0);
                 }
                 ctx.fillText("Game Over!", canvas.width / 2 - 100, canvas.height / 2);
                 ctx.fillText("Time: " + seconds + "s", canvas.width / 2 - 100, canvas.height / 2 + 50);
