Added sound effects to the new jump scares

--- a/JS Projectile Dodging Game/ProjectileDodging.html
+++ b/JS Projectile Dodging Game/ProjectileDodging.html
@@ -100,17 +100,17 @@
             }
             if (ranNum == 2) {
                 gameoverImg.src = "Images/dripGoku.png";
-                document.getElementById("gameover-audio").src = 'sfx/Surprise Blue Lobster Meme Sound Effect.mp3';
+                document.getElementById("gameover-audio").src = 'sfx/the first note of ultra instinct.mp3';
                 fileType = 'image';
             }
             if (ranNum == 3) {
                 gameoverImg.src = "Images/beckham.png";
-                document.getElementById("gameover-audio").src = 'sfx/Surprise Blue Lobster Meme Sound Effect.mp3';
+                document.getElementById("gameover-audio").src = 'sfx/FNAF 2 Hallway Ambience Meme Sound Effect.mp3';
                 fileType = 'image';
             }
             if (ranNum == 4) {
                 gameoverImg.src = "Images/whatTheHelllllllllllll.png";
-                document.getElementById("gameover-audio").src = 'sfx/Surprise Blue Lobster Meme Sound Effect.mp3';
+                document.getElementById("gameover-audio").src = 'sfx/WHAT THE HELLLLLLL sound effect.mp3';
                 fileType = 'image';
             }
             resetGame();
